==> sivantoledo/vildehaye-firmware/vildehaye-common/bme280.c <==
#include <config.h>
#include <xdc/runtime/System.h>
#include "bme280.h"
#include <ti/sysbios/knl/Task.h>
#define OVERSAMPLING_SETTINGS		UINT8_C(0x07)
#define FILTER_STANDBY_SETTINGS		UINT8_C(0x18)

int8_t bme280_init(uint8_t addr)
{
	int8_t rslt;
	/* chip id read try count */
	uint8_t try_count = 5;
	uint8_t chip_id = 0;

	dev.dev_id = addr;
    dev.intf = BME280_I2C_INTF;
    dev.read = bme280_i2c_read;
    dev.write = bme280_i2c_write;
    dev.delay_ms = bme280_delay_ms;

	/* Check for null pointer in the device structure*/
	rslt = null_ptr_check(&dev);
	/* Proceed if null check is fine */
	if (rslt ==  BME280_OK) {
		while (try_count) {
			/* Read the chip-id of bme280 sensor */
			rslt = bme280_get_regs(BME280_CHIP_ID_ADDR, &chip_id, 1, &dev);
			/* Check for chip id validity */
			if ((rslt == BME280_OK) && (chip_id == BME280_CHIP_ID)) {
				dev.chip_id = chip_id;
				/* Reset the sensor */
				rslt = bme280_soft_reset(&dev);
				if (rslt == BME280_OK) {
					/* Read the calibration data */
					rslt = get_calib_data(&dev);
				}
				break;
			}
			/* Wait for 1 ms */
			dev.delay_ms(1);
			--try_count;
		}
		/* Chip id check failed */
		if (!try_count)
			rslt = BME280_E_DEV_NOT_FOUND;
	}

	return rslt;
}

int8_t bme280_i2c_read(uint8_t dev_id, uint8_t reg_addr, uint8_t *reg_data, uint16_t len)
{
    int8_t rslt = 0; /* Return 0 for Success, non-zero for failure */

    //Fill TX Buffer with the register address
    txBuffer[0] = reg_addr;

    //Point I2C parameters to correct values. Set up to read "cnt" number of bytes.
    i2cTransaction.slaveAddress = dev_id;
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.writeCount = 1;
    i2cTransaction.readBuf = reg_data;
    i2cTransaction.readCount = len;

    //Perform I2C read
    I2C_transfer(i2c, &i2cTransaction);


    return rslt;
}

int8_t bme280_i2c_write(uint8_t dev_id, uint8_t reg_addr, uint8_t *reg_data, uint16_t len)
{
    int8_t rslt = 0; /* Return 0 for Success, non-zero for failure */

    int i = 1;

    //Fill TX Buffer with the register address and subsequent data bytes
    txBuffer[0] = reg_addr;
    for(i=1; i<len+1;i++)
        txBuffer[i] = reg_data[i-1];

    //Point TI-RTOS I2C parameters to correct values
    i2cTransaction.slaveAddress = dev_id;
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.writeCount = len+1;
    i2cTransaction.readBuf = rxBuffer;
    i2cTransaction.readCount = 0;

    //Perform I2C write
    I2C_transfer(i2c, &i2cTransaction);

    return rslt;
}
