==> nshcat/STM32_HAL_BME280/Src/BME280/bme280.c <==
#include "stm32f4xx_hal.h"
#include "bme280.h"
#define OVERSAMPLING_SETTINGS		UINT8_C(0x07)
#define FILTER_STANDBY_SETTINGS		UINT8_C(0x18)

int8_t bme280_init(BME280_HandleTypedef* dev, I2C_HandleTypeDef* i2c, uint8_t addr)
{
	int8_t rslt;
	/* chip id read try count */
	uint8_t try_count = 5;
	uint8_t chip_id = 0;

	/* Init data */
	dev->dev_addr = addr;
	dev->i2c = i2c;

	/* Check for null pointer in the device structure*/
	rslt = null_ptr_check(dev);
	/* Proceed if null check is fine */
	if (rslt ==  BME280_OK) {
		while (try_count) {
			/* Read the chip-id of bme280 sensor */
			rslt = bme280_get_regs(BME280_CHIP_ID_ADDR, &chip_id, 1, dev);
			/* Check for chip id validity */
			if ((rslt == BME280_OK) && (chip_id == BME280_CHIP_ID)) {
				dev->chip_id = chip_id;
				/* Reset the sensor */
				rslt = bme280_soft_reset(dev);
				if (rslt == BME280_OK) {
					/* Read the calibration data */
					rslt = get_calib_data(dev);
				}
				break;
			}
			/* Wait for 1 ms */
			HAL_Delay(1);
			--try_count;
		}
		/* Chip id check failed */
		if (!try_count)
			rslt = BME280_E_DEV_NOT_FOUND;
	}

	return rslt;
}

static int8_t bme280_i2c_read(BME280_HandleTypedef* dev, uint8_t id, uint8_t reg_addr, uint8_t *data, uint16_t len)
{
  if(HAL_I2C_Master_Transmit(dev->i2c, (id << 1), &reg_addr, 1, 10) != HAL_OK) return -1;
  if(HAL_I2C_Master_Receive(dev->i2c, (id << 1) | 0x01, data, len, 10) != HAL_OK) return -1;

  return 0;
}

static int8_t bme280_i2c_write(BME280_HandleTypedef* dev, uint8_t id, uint8_t reg_addr, uint8_t *data, uint16_t len)
{
  int8_t *buf;
  buf = malloc(len +1);
  buf[0] = reg_addr;
  memcpy(buf +1, data, len);

  if(HAL_I2C_Master_Transmit(dev->i2c, (id << 1), (uint8_t*)buf, len + 1, HAL_MAX_DELAY) != HAL_OK) return -1;

  free(buf);
  return 0;
}
